<resources>
    <string name="app_name">JMFMobile</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="pdf_list_title">收藏一番赏</string>
    <string name="error_generic">发生未知错误，无法打开文件。</string>

    <!-- Home fragment strings -->
    <string name="status_idle">待命</string>
    <string name="instruction_input">请输入神秘番号~</string>
    <string name="hint_comic_id">输入ID数字即可</string>
    <string name="btn_download_text">Download</string>
    <string name="toolbar_tools">工具栏</string>
    <string name="btn_open_output_text">📁 目录</string>
    <string name="btn_preview_text">📖 预览</string>
    <string name="btn_settings_text">⚙️ 设置</string>
    <string name="btn_clear_log_text">🗑️ 清空日志</string>
    <string name="download_progress">下载进度</string>
    <string name="percent_0">0%</string>
    <string name="logs_title">运行日志</string>
    <string name="log_hint">等待操作…</string>
    <string name="log_start">JMFMobile STARTED\n</string>

    <!-- PDF list / item strings -->
    <string name="pdf_file_desc">PDF 文件</string>
    <string name="click_to_preview">点击起飞~</string>
    <string name="open_desc">打开</string>
    <string name="unnamed_pdf">未命名 PDF</string>
</resources>