<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="12dp"
    card_view:cardElevation="4dp"
    card_view:cardCornerRadius="12dp"
    android:clickable="false"
    android:focusable="false">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp"
        android:background="@drawable/card_background"
        android:descendantFocusability="blocksDescendants"
        android:gravity="center_vertical">

        <!-- PDF 图标 -->
        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/ic_menu_gallery"
            android:layout_gravity="center_vertical"
            android:adjustViewBounds="true"
            android:scaleType="centerInside"
            android:contentDescription="@string/pdf_file_desc"
            app:tint="@color/primary" />

        <!-- 文件信息 -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_marginStart="16dp"
            android:layout_gravity="center_vertical">

            <TextView
                android:id="@+id/item_pdf_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/text_primary"
                android:textSize="16sp"
                android:textStyle="bold"
                android:maxLines="2"
                android:ellipsize="end"
                android:fontFamily="@font/aaguxilazhangguankeaideshen_2" />

            <TextView
                android:id="@+id/item_pdf_subtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/click_to_preview"
                android:textColor="@color/text_secondary"
                android:textSize="12sp"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/aaguxilazhangguankeaideshen_2" />

        </LinearLayout>

        <!-- 箭头指示器 -->
        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_arrow_back"
            android:layout_gravity="center_vertical"
            android:rotation="180"
            app:tint="@color/text_primary"
            android:contentDescription="@string/open_desc" />

    </LinearLayout>

</androidx.cardview.widget.CardView>
